real first commit

--- a/notes.ipynb
+++ b/notes.ipynb
@@ -561,14 +561,34 @@
     "Este dataset contiene información de los clientes como su duración en la compañía, servicios contratados, facturación, entre otros. \n",
     "\n",
     "### Atributos:\n",
-    "\n"
+    "\n",
+    "- **CustomerID:** identificador único del cliente.\n",
+    "- **Gender:** género del cliente.\n",
+    "- **SeniorCitizen:** variable binaria que indica si el cliente es mayor de 65 años.\n",
+    "- **Partner:** variable binaria que indica si el cliente tiene pareja.\n",
+    "- **Dependents:** variable binaria que indica si el cliente tiene dependientes.\n",
+    "- **Tenure:** cantidad de meses que el cliente ha estado en la compañía.\n",
+    "- **PhoneService:** variable binaria que indica si el cliente tiene servicio telefónico.\n",
+    "- **MultipleLines:** variable categórica que indica si el cliente tiene una o múltiples líneas telefónicas.\n",
+    "- **InternetService:** variable categórica que indica si el cliente tiene servicio de internet y el tipo de conexión (DSL, fibra óptica o sin conexión).\n",
+    "- **OnlineSecurity:** variable categórica que indica si el cliente tiene servicio de seguridad en línea.\n",
+    "- **OnlineBackup:** variable categórica que indica si el cliente tiene servicio de respaldo en línea.\n",
+    "- **DeviceProtection:** variable categórica que indica si el cliente tiene servicio de protección de dispositivos.\n",
+    "- **TechSupport:** variable categórica que indica si el cliente tiene servicio de soporte técnico.\n",
+    "- **StreamingTV:** variable categórica que indica si el cliente tiene servicio de televisión por streaming.\n",
+    "- **StreamingMovies:** variable categórica que indica si el cliente tiene servicio de películas por streaming.\n",
+    "- **Contract:** variable categórica que indica el tipo de contrato del cliente (mes a mes, anual o bianual).\n",
+    "- **PaperlessBilling:** variable binaria que indica si el cliente recibe facturas en línea o por correo.\n",
+    "- **PaymentMethod:** variable categórica que indica el método de pago del cliente.\n",
+    "- **MonthlyCharges:** cantidad mensual de dinero que el cliente paga a la compañía.\n",
+    "- **TotalCharges:** cantidad total de dinero que el cliente ha pagado a la compañía hasta el momento.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conocinedo nuestro dataset\n",
     "## Preparando los datos\n",
     "\n",
     "### En el siguiente Data pre-processing\n",
@@ -983,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1016,43 +1036,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3719</th>\n",
+       "      <th>4804</th>\n",
        "      <td>One year</td>\n",
-       "      <td>28</td>\n",
-       "      <td>18.25</td>\n",
-       "      <td>534.7</td>\n",
+       "      <td>61</td>\n",
+       "      <td>118.60</td>\n",
+       "      <td>7365.7</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1654</th>\n",
+       "      <th>5127</th>\n",
        "      <td>One year</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18.80</td>\n",
-       "      <td>18.8</td>\n",
+       "      <td>67</td>\n",
+       "      <td>118.35</td>\n",
+       "      <td>7804.15</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4610</th>\n",
+       "      <td>One year</td>\n",
+       "      <td>72</td>\n",
+       "      <td>117.80</td>\n",
+       "      <td>8684.8</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3299</th>\n",
+       "      <td>One year</td>\n",
+       "      <td>68</td>\n",
+       "      <td>117.20</td>\n",
+       "      <td>8035.95</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1846</th>\n",
+       "      <th>4627</th>\n",
        "      <td>One year</td>\n",
-       "      <td>19</td>\n",
-       "      <td>18.80</td>\n",
-       "      <td>279.2</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6925</th>\n",
-       "      <td>One year</td>\n",
-       "      <td>15</td>\n",
-       "      <td>18.80</td>\n",
-       "      <td>294.95</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4274</th>\n",
-       "      <td>One year</td>\n",
-       "      <td>45</td>\n",
-       "      <td>18.85</td>\n",
-       "      <td>867.3</td>\n",
+       "      <td>60</td>\n",
+       "      <td>116.60</td>\n",
+       "      <td>7049.5</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1064,43 +1084,43 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4627</th>\n",
+       "      <th>4274</th>\n",
        "      <td>One year</td>\n",
-       "      <td>60</td>\n",
-       "      <td>116.60</td>\n",
-       "      <td>7049.5</td>\n",
+       "      <td>45</td>\n",
+       "      <td>18.85</td>\n",
+       "      <td>867.3</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3299</th>\n",
+       "      <th>6925</th>\n",
        "      <td>One year</td>\n",
-       "      <td>68</td>\n",
-       "      <td>117.20</td>\n",
-       "      <td>8035.95</td>\n",
+       "      <td>15</td>\n",
+       "      <td>18.80</td>\n",
+       "      <td>294.95</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4610</th>\n",
+       "      <th>1846</th>\n",
        "      <td>One year</td>\n",
-       "      <td>72</td>\n",
-       "      <td>117.80</td>\n",
-       "      <td>8684.8</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18.80</td>\n",
+       "      <td>279.2</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5127</th>\n",
+       "      <th>1654</th>\n",
        "      <td>One year</td>\n",
-       "      <td>67</td>\n",
-       "      <td>118.35</td>\n",
-       "      <td>7804.15</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18.80</td>\n",
+       "      <td>18.8</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4804</th>\n",
+       "      <th>3719</th>\n",
        "      <td>One year</td>\n",
-       "      <td>61</td>\n",
-       "      <td>118.60</td>\n",
-       "      <td>7365.7</td>\n",
+       "      <td>28</td>\n",
+       "      <td>18.25</td>\n",
+       "      <td>534.7</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1110,28 +1130,42 @@
       ],
       "text/plain": [
        "      Contract  tenure  MonthlyCharges TotalCharges Churn\n",
-       "3719  One year      28           18.25        534.7    No\n",
-       "1654  One year       1           18.80         18.8    No\n",
-       "1846  One year      19           18.80        279.2    No\n",
-       "6925  One year      15           18.80       294.95    No\n",
-       "4274  One year      45           18.85        867.3    No\n",
-       "...        ...     ...             ...          ...   ...\n",
-       "4627  One year      60          116.60       7049.5    No\n",
-       "3299  One year      68          117.20      8035.95    No\n",
-       "4610  One year      72          117.80       8684.8   Yes\n",
-       "5127  One year      67          118.35      7804.15   Yes\n",
        "4804  One year      61          118.60       7365.7    No\n",
+       "5127  One year      67          118.35      7804.15   Yes\n",
+       "4610  One year      72          117.80       8684.8   Yes\n",
+       "3299  One year      68          117.20      8035.95    No\n",
+       "4627  One year      60          116.60       7049.5    No\n",
+       "...        ...     ...             ...          ...   ...\n",
+       "4274  One year      45           18.85        867.3    No\n",
+       "6925  One year      15           18.80       294.95    No\n",
+       "1846  One year      19           18.80        279.2    No\n",
+       "1654  One year       1           18.80         18.8    No\n",
+       "3719  One year      28           18.25        534.7    No\n",
        "\n",
        "[1473 rows x 5 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['Contract']=='One year'].sort_values(by='MonthlyCharges', ascending=True)[['Contract','tenure','MonthlyCharges','TotalCharges','Churn']]"
+    "df[df['Contract']=='One year'].sort_values(by='MonthlyCharges', ascending=False)[['Contract','tenure','MonthlyCharges','TotalCharges','Churn']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git init\n",
+    "git commit -m \"first commit\"\n",
+    "git branch -M\n",
+    "main\n",
+    "git remote add origin git@github.com:mazzaroli/reg_log.git\n",
+    "git push -u origin main"
    ]
   }
  ],
